ingress/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: admin-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Protected Admin Area"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - admin.web-practica.local
      secretName: admin-tls
  rules:
    - host: admin.web-practica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-frontend-service
                port:
                  number: 80
