ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - web-practica.local
        - api.web-practica.local
      secretName: web-practica-tls
  rules:
    - host: web-practica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.web-practica.local
      http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: api-v1-service
                port:
                  number: 8080
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: api-v2-service
                port:
                  number: 8080
